--- a/index.html
+++ b/index.html
@@ -22,19 +22,51 @@
 			<button class="head_button">CONTACT</button>
 		</div>
 		
-		<p class="welcome_text">WELCOME ON <p class="orange">MYCOMPANY</p></p> 
+		<div id="welcome_text"><p class="welcome_text">WELCOME ON <p class="orange">MYCOMPANY</p></p></div> 
 		<p class="past_welcome_text">We are a digital agency with <b>years of experience</b> and with <b>extraordinary people</b></p>
 	</div>
 	<div class="about_page">
 		<img class="mac_img" src="images/mac.png" alt="">
-
+		
 		<p class="welcome_text_black">SOME WORDS <b> ABOUT US </b></p> 
+
 		<p class="past_welcome_text_black">Lorem ipsum dolor sit amet, consectetur adipisicing <br> elit. Doloribus ex quidem maiores ullam quis, at as <br> periores minus ad eaque maxime possimus .</p>
 		<ul class="about_ul">
 			<li ><b>Mission</b> - We deliver uniqueness and quality</li>
 			<li><b>Skills</b> - Delivering fast and excellent results</li>
 			<li><b>Clients</b> - Satisfied clients thanks to our experience</li>
 		</ul>
+	</div>
+	<div class="about_team_page">
+		<br><br><br><br>
+		<a class="about_team_h">OUR TEAM</a> 
+		<div class="men">
+			<div class="man">
+				<div></div>	
+				<p class="name">Vlad Ivanov</p> <br>
+				<p>Designer</p> <br>
+				<p>Do not seek to change what has come <br> before. Seek to create that which has not.</p>
+			</div>
+			<div class="man">
+				<div></div>	
+				<p class="name">Bogdan Makarov</p> <br>
+				<p>Manager</p> <br>
+				<p>Do not seek to change what has come <br> before. Seek to create that which has not.</p>
+			</div>
+			<div class="man">
+				<div></div>	
+				<p class="name">Pavel Konov</p> <br>
+				<p>Copywriter</p> <br>
+				<p>Do not seek to change what has come <br> before. Seek to create that which has not.</p>
+			</div>
+			<div class="man">
+				<div></div>	
+				<p class="name">Max Belov</p> <br>
+				<p>SEO</p> <br>
+				<p>Do not seek to change what has come <br> before. Seek to create that which has not.</p>
+			</div>
+			
+		</div>
 	</div>
 	<script src="js/js.js"></script>
 </body>
