--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			<div class="man">
 				<div></div>	
 				<p class="name">Pavel Konov</p> <br>
+				<p class></p>
 				<p>Copywriter</p> <br>
 				<p>Do not seek to change what has come <br> before. Seek to create that which has not.</p>
 			</div>
@@ -63,6 +64,34 @@
 				<div></div>	
 				<p class="name">Max Belov</p> <br>
 				<p>SEO</p> <br>
+				<p>Do not seek to change what has come <br> before. Seek to create that which has not.</p>
+			</div>
+			
+		</div>
+	</div>
+	<div class="our_services_page">
+		<br><br><br><br>
+		<a class="about_team_h">OUR TEAM</a> 
+		<p style="text-align: center; margin-top: 40px;color:darkgray;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto<br> assumenda velit excepturi porro ipsa tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus e,br.x quidem maiores ullam quis, at asperiores<br> minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.</p>
+		<div class="men">
+			<div class="man">
+				<div class="circle"><img src="images/pc.png" style="height: 40px;margin-top: 20px;"></div>	
+				<p class="name">WEB DESIGN</p> <br>
+				<p>Do not seek to change what has come <br> before. Seek to create that which has not.</p>
+			</div>
+			<div class="man">
+				<div class="circle"><img src="images/phone.png" style="height: 40px;margin-top: 20px;"></div>	
+				<p class="name">MOBILE APPS</p> <br>
+				<p>Do not seek to change what has come <br> before. Seek to create that which has not.</p>
+			</div>
+			<div class="man">
+				<div class="circle"><img src="images/photo.png" style="height: 35px;margin-top: 20px;"></div>	
+				<p class="name">PHOTOGRAPHY</p> <br>
+				<p>Do not seek to change what has come <br> before. Seek to create that which has not.</p>
+			</div>
+			<div class="man">
+				<div class="circle"><img src="images/volume.png" style="height: 40px;margin-top: 20px;"></div>	
+				<p class="name">MARKETING</p> <br>
 				<p>Do not seek to change what has come <br> before. Seek to create that which has not.</p>
 			</div>
 			
