New version, added js functuons

--- a/index.html
+++ b/index.html
@@ -97,6 +97,36 @@
 			
 		</div>
 	</div>
+	<div class="contact">
+		<br><br><br><br>
+		<a class="about_team_h">CONTACT US</a> 
+		<p style="margin-top: 40px;color:darkgray;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at<br>asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa<br>tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+		<div class="inp">
+			<div class="inp_table">
+				<div class="inp_name">
+					<p>Name *</p>
+					<input class="name" type="text"> 
+				</div>
+				<div class="inp_email">
+					<p>Email address *</p>
+					<input class="email" type="text"> 
+				</div>
+			</div>
+			<div class="inp_text">
+				<p>Message *</p>
+				<input class="text" type="text"> 
+			</div>
+			<button class="send_btn"><a class="send_btn_a"  href="mailto:kadirovdenis123@gmail.com?:»>order@mysite.com">SEND</a></button>
+		</div>
+					
+	</div>
+	<div class="end">
+		<div class="logo_container">
+			<a class="logol" href="https://github.com/fdfdfdfda"><img src="images/github.png" alt=""></a>
+			<a class="logor" href="mailto:kadirovdenis123@gmail.com?:»>order@mysite.com"><img src="images/gmail.png" alt=""></a>
+			<a class="logor" href="https://vk.com/deniskadirov"><img src="images/vk.png" alt=""></a>
+		</div>
+	</div>
 	<script src="js/js.js"></script>
 </body>
 </html>
