--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0014)about:internet -->
+<!-- saved from url=(0023)http://code.jquery.com/jquery-latest.js -->
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
