--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0023)http://code.jquery.com/jquery-latest.js -->
+
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/css.css">
-	<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+	<script src="https://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
 </head>
 <body>
 	<div id="page1" class="home_page">
